--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="searchInput">Enter a word</string>
     <string name="searchButton">SEARCH</string>
     <string name="viewSavedButton">VIEW SAVED</string>
+    <string name="myToolbar">DICTIONARY</string>
+
 
     <!--    **do french-->
 </resources>
