--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MobileFinalProjectLabs</string>
-    <string name="dictionaryTitle">DICTIONARY</string>
+    <string name="app_name">DICTIONARY</string>
+    <!--    <string name="dictionaryTitle">DICTIONARY</string>-->
     <string name="searchInput">Enter a word</string>
     <string name="searchButton">SEARCH</string>
     <string name="viewSavedButton">VIEW SAVED</string>
