def3: app works. i can search a word, it appears with phonetic, part of speech, and list of definitions. i can also scroll. need to do home, save and about next.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="searchButton">SEARCH</string>
     <string name="viewSavedButton">VIEW SAVED</string>
     <string name="myToolbar">DICTIONARY</string>
+    <string name="searched_term">Searched Term</string>
+    <string name="definition">definition</string>
 
 
     <!--    **do french-->
