--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">DICTIONAIRE</string>
     <string name="searchInput">Entrez un mot</string>
-    <string name="searchButton">RECHERCHE</string>
+    <string name="searchButton">RECHERCHER</string>
     <string name="viewSavedButton">VOIR LES SAUVEGARDERS</string>
     <string name="myToolbar">DICTIONAIRE</string>
     <string name="searched_term">Mot Recherché</string>
@@ -13,4 +13,5 @@
     <string name="home">Accueil</string>
     <string name="saved">Voir les sauvegarders</string>
     <string name="about">À propos</string>
+    <string name="phonetic">Phonetic</string>
 </resources>
