--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="home">Home</string>
     <string name="saved">View Saved</string>
     <string name="about">About</string>
+    <string name="phonetic">Phonetic</string>
 </resources>
