def5: Savedterms page opens, it just says "saved items" at the top for now

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,4 +14,5 @@
     <string name="saved">Voir les sauvegarders</string>
     <string name="about">À propos</string>
     <string name="phonetic">Phonetic</string>
+    <string name="savedPage">Les sauvegardés</string>
 </resources>
