--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="saved">View Saved</string>
     <string name="about">About</string>
     <string name="phonetic">Phonetic</string>
+    <string name="savedPage">Saved Words</string>
 </resources>
