--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name_main">MobileFinalProjectLabs</string>
     <string name="app_name">DICTIONAIRE</string>
     <string name="searchInput">Entrez un mot</string>
     <string name="searchButton">RECHERCHER</string>
