--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">MobileFinalProjectLabs</string>
+    <string name="app_name">Recipe Search</string>
+    <string name="fyi">Welcome! Enter a recipe you would like to search for below.</string>
+    <string name="hint">tacos, pancakes, meatloaf...</string>
+    <string name="search">Search</string>
 </resources>
