--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="search">Search</string>
     <string name="loading">Loading...</string>
     <string name="searchRecipe">Search Recipe</string>
+    <string name="home">Home</string>
+    <string name="about">About</string>
+    <string name="help_menu">Help Menu</string>
+    <string name="help_message">Enter a recipe to search for and click the search button.</string>
+    <string name="ok">OK!</string>
 </resources>
